# nucleus-mcp

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  COMBOS.md  COMPARISON.md  CONTRIBUTING.md  DAILY_USAGE_GUIDE.md  DEVELOPMENT.md  Dockerfile  FIX_PERPLEXITY_CONFIG.md  FORCE_RELOAD_PHASE73.md  HARDENING_CONVERGENCE_REPORT.md  HARDENING_CONVERGENCE_REPORT_V2.md  INSTALL_PHASE73_NOW.md  NUCLEUS_REF.md  PHASE73_ACTIVATION_SUCCESS.md  PHASE73_COMPREHENSIVE_VALIDATION.md  PHASE73_FINAL_SUMMARY.md  PHASE73_STATUS.md  PHASE73_TEST_RESULTS.md  PHASE73_VALIDATION_COMPLETE.md  PRE_LAUNCH_VALIDATION_RESULTS.md  README.md  README_GODMODE.md  README_OPEN_SOURCE.md  RELEASE_CHECKLIST_v1.5.1.md  RESURRECTION_CENSUS.md  ROADMAP.md  SECURITY.md  SKILL.md  TELEMETRY.md  TELEMETRY_PLAYBOOKS.md  WINDOWS_CI_SUMMARY.md  _preimport_beartype.py  aws_microservices.json  cloudbuild.yaml  debug.py  (+31 more)
.agent/workflows/: sync-public.md
.brain_live_test/: README.md
.brain_live_test/ledger/: tasks.json
.brain_live_test/meta/: thread_registry.md
.brain_test_robustness/ledger/: state.json  tasks.json
.brain_test_robustness/memory/: context.md
.claude/: settings.json
.claude/hooks/: ground-verify.py
.demo_brain_c/ledger/: mounts.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-public.yml  ci.yml  hol-skill-validate.yml
.grok-plugin/: plugin.json
.smithery/shttp/: module.js  module.js.map
.smithery/stdio/: index.cjs  index.cjs.map
.test_configs_live/: windsurf.json
.well-known/mcp/: server-card.json
.wrangler/cache/: pages.json  wrangler-account.json
benchmarks/: bench_nucleus.py
benchmarks/v0/: decision_retention_v0.md
brain/knowledge/: DOMAIN_GROUND_TRUTH.md
build_dark/src/: Dockerfile
build_public/: README.md  pyproject.toml
build_public/src/mcp_server_nucleus/: __init__.py
build_public/src/mcp_server_nucleus/runtime/: factory.py  ipc_auth.py  llm_client.py  render_ops.py
demo/verifier/: curated_claims.json  ledger_loop_demo.py
deploy/: deploy.sh  docker-compose.eu-dora.yml  docker-compose.sg-mas-trm.yml  docker-compose.us-soc2.yml  entrypoint.sh
docs/: AGENT_LEGO_DISCIPLINE.md  AGENT_OS_CANARY.md  AGENT_OS_FIRST_USER.md  AGENT_OS_MANIFESTO.md  AGENT_OS_MEMBRANE.md  AGENT_OS_MOAT.md  AGENT_OS_REDTEAM.md  AGENT_OS_ROADMAP.md  AGENT_OS_STATE.md  AGENT_RUNTIME_V2.md  AUTH_ARCHITECTURE.md  CHANGELOG_v1.0.7.md  CLI_REFERENCE.md  CLOUD_RUN_DEPLOY.md  COMMUNITY_FAQ.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  DEEPWIKI_PATHS.md  DEMO_SCRIPT.md  DEMO_STORYBOARD.md  ENGRAM_SPECIFICATION.md  ENTERPRISE.md  FAQ.md  GOVERNANCE_POLICIES.md  HTTP_TRANSPORT.md  MCP_CLIENT_TESTS.md  PHASE73_QUICK_START.md  PHASE_A_SHORT_SCRIPT.md  PHASE_B_SHORT_SCRIPT.md  PHASE_C_SHORT_SCRIPT.md  PLAN_REVIEW_LOOP.md  PROD_READINESS.md  QUICK_START.md  RABBITHOLE.md  README.md  REDDIT_LAUNCH_POST.md  SECURITY_WHITEPAPER.md  SPECIFICATION.md  Sovereign_Compliance_Officer_Handbook.md  TENANT_SPEC.md  (+7 more)
docs/adr/: 001-http-transport.md  README.md
docs/architecture/: BINARY_SHIELDING_TRACK_1_5.md  DSOR_V060.md  TOOL_ROUTER_PATTERN.md
docs/connectors/: CHATGPT_APP_SUBMISSION.md  CHATGPT_CONNECTOR.md  CHATGPT_FIRST_RUN_ONBOARDING.md  CLAUDE_DIRECTORY_SUBMISSION.md  MICROSOFT_365_COPILOT_SUBMISSION.md  PERPLEXITY_CONNECTOR.md  README.md
docs/ops/: pypi_yank_staging.md
docs/product_landscape/: RANKING_DECISION.md  pathways_adrs.md  pathways_recent.md  pathways_runtime.md
engrams/: history.jsonl  ledger.jsonl
examples/: README.md  basic_usage.py  claude_desktop_config.example.json  depth_tracker_demo.py  engram_demo.py  governance_demo.py  mounter_demo.py  task_management_demo.py  test_shield.txt
extensions/claude-desktop/: manifest.json  pyproject.toml
extensions/claude-desktop/src/: server.py
ledger/: activity_summary.json  events.jsonl  interaction_log.jsonl  tasks.json
npm-wrapper/: README.md  index.js  package-lock.json  package.json
scripts/: alive_moment_demo.py  bootstrap_node_beta.ps1  build_dark_wheel.py  build_dual_artifacts.sh  build_mcpb.sh  build_public_decoy.py  cleanup_ledger.py  codemod_envelope_tests.py  demo_60_seconds.py  demo_c_recursive_mounting.py  demo_governance.py  deploy_airgapped_agent.sh  first-user-alert.sh  gen_relay_token.py  generate_tool_catalog.py  install_nucleus_daemon.sh  invoke_v10_swarm.py  invoke_v9_swarm.py  mac_diagnostic.sh  marketplace-submissions.md  monolith_decomposition.py  nucleus_speed_test.py  probe_mcp_tools.py  publish_pypi.sh  sanitize_cli.py  seed_dsor_demo_data.py  seed_engrams.py  setup-smart-drain-cron.sh  simulate_research_workflow.py  smart-drain.sh  smoke_test_130.py  sse_bridge.py  sync_public_repo.sh  test_e2e_critical_path.py  test_llm_tiers.py  verify_adun.py  verify_all_tools.py  verify_git_cleanroom.sh  verify_guardrail.py  verify_hooks.py  (+13 more)
sdk/python/: README.md  pyproject.toml
sdk/python/nucleus_relay_sdk/: __init__.py  client.py  envelope.py
src/: app.py
telemetry-notes/: brief_2026-03-13_004611.md
test_brain_verify/: mounts.json
tests/: CODEMOD_DIFF.md  __init__.py  append_21_rows.py  append_all_playbooks.py  append_remaining_2.py  cli_harness.py  conftest.py  deep_audit.py  double_check.py  find_missing_matrix.py  generate_matrix.py  routing_fuzzer_architecture.py  test_admin.py  test_agent_dashboard.py  test_agent_pool_hardening.py  test_agent_runtime_telemetry.py  test_agent_runtime_v2.py  test_artifact_feature_sync.py  test_auth_module.py  test_auto_awake_daemon.py  test_bench_cmd.py  test_bin_scripts.py  test_brain_consolidation.py  test_brain_v2_logic.py  test_budget_alerts.py  test_budget_ops.py  test_channels.py  test_checkpoint_ops.py  test_circuit_breaker.py  test_cli.py  test_cli_agent_commands.py  test_cli_handlers.py  test_cli_imports.py  test_cli_output.py  test_cli_v141_agent_native.py  test_combo_cli.py  test_compliance.py  test_conversation_ops.py  test_conversation_ops_providers.py  test_coord_events.py  (+118 more)
website/: astro.config.mjs  package-lock.json
(+509 files in other folders)
