[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleus-mcp"
version = "1.3.1"
description = "Sovereign Agent OS — Persistent Memory, Governance & Compliance for AI Agents"
readme = "README.md"
authors = [
    { name = "Nucleus Team", email = "hello@nucleusos.dev" }
]
urls = { Homepage = "https://github.com/eidetic-works/nucleus-mcp", Repository = "https://github.com/eidetic-works/nucleus-mcp" }
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "watchdog>=3.0.0",
    "google-cloud-firestore>=2.11.0",
    "duckduckgo-search>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "nest_asyncio",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.3",
    "xattr; sys_platform != 'win32'",
]

[project.optional-dependencies]
full = [
    "fastmcp",
    "google-genai"
]
postgres = [
    "psycopg2-binary"
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "ruff"
]

[project.scripts]
nucleus-mcp = "mcp_server_nucleus:main"
nucleus = "mcp_server_nucleus.cli:main"
nucleus-init = "mcp_server_nucleus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_nucleus"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_server_nucleus/dashboard/static" = "mcp_server_nucleus/dashboard/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E741", "F841", "E722", "E702", "F401", "F541"]
