[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleus-mcp"
version = "1.8.8"
description = "Sovereign Agent OS — Persistent Memory, Governance & Compliance for AI Agents"
readme = "README.md"
authors = [
    { name = "Nucleus Team", email = "hello@nucleusos.dev" }
]
urls = { Homepage = "https://github.com/eidetic-works/nucleus-mcp", Repository = "https://github.com/eidetic-works/nucleus-mcp" }
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "fastmcp",
    "cffi",
    "watchdog>=6.0.0",
    "duckduckgo-search>=8.1.1",
    "beautifulsoup4>=4.14.3",
    "nest_asyncio",
    "cryptography>=46.0.6",
    "pyyaml>=6.0.3",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
]

[project.optional-dependencies]
full = [
    "google-genai",
    "google-cloud-firestore>=2.26.0",
]
postgres = [
    "psycopg2-binary"
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout",
    "ruff"
]

[project.scripts]
nucleus-mcp = "mcp_server_nucleus:main"
nucleus = "mcp_server_nucleus.cli:main"
nucleus-init = "mcp_server_nucleus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_nucleus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end integration tests",
    "timeout: override default test timeout",
]

[tool.coverage.run]
branch = true
source = ["src/mcp_server_nucleus"]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E741", "F841", "E722", "E702", "F401", "F541"]
