[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleus-mcp"
version = "1.16.0"
description = "Sovereign Agent OS — Persistent Memory, Governance & Compliance for AI Agents"
readme = "README.md"
authors = [
    { name = "Nucleus Team", email = "hello@nucleusos.dev" }
]
urls = { Homepage = "https://github.com/eidetic-works/nucleus-mcp", Repository = "https://github.com/eidetic-works/nucleus-mcp" }
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "fastmcp",
    "cffi",
    "curl_cffi>=0.5.0",
    "watchdog>=6.0.0",
    "google-cloud-firestore>=2.26.0",
    "duckduckgo-search>=8.1.1",
    "beautifulsoup4>=4.14.3",
    "nest_asyncio",
    "cryptography>=46.0.6",
    "pyyaml>=6.0.3",
    "xattr; sys_platform != 'win32'",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "rank-bm25>=0.2",
    "filelock>=3.16.0",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    "python-dotenv>=1.2.2",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.1",
    "pydantic-settings>=2.14.2",
    "pygments>=2.20.0",
    "idna>=3.15",
    "pyasn1>=0.6.3",
    "lxml>=6.1.0",
]

[project.optional-dependencies]
full = [
    "fastmcp>=3.2.0",
    "google-genai"
]
postgres = [
    "psycopg2-binary"
]
http = [
    "uvicorn[standard]>=0.29.0",
    "starlette>=1.3.1",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.32",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout",
    "pytest-benchmark",
    "aiohttp>=3.14.1",
    "ruff"
]

[project.scripts]
nucleus-mcp = "mcp_server_nucleus:main"
nucleus = "mcp_server_nucleus.cli:main"
nucleus-init = "mcp_server_nucleus.cli:main"
nucleus-wedge = "nucleus_wedge.__main__:main"
nucleus-mcp-http = "mcp_server_nucleus.http_transport.server:main"
nucleus-mcp-cloud = "mcp_server_nucleus.http_transport.app:serve"
nucleus-relay-bridge = "mcp_server_nucleus.runtime.relay.bridge:main"
nucleus-rabbithole = "mcp_server_nucleus.rabbithole.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_nucleus", "src/nucleus_wedge"]

# sdist defaults to "everything in the repo" — fence to the source-build-needed set.
# Prior v1.13.0 release uploaded a 691 MiB sdist (Claude worktrees + node_modules + wasm).
# only-include keeps the archive at ~1-2 MiB while remaining buildable end-to-end.
[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end integration tests",
    "timeout: override default test timeout",
    "release: release-hygiene gates (wheel completeness, stranger first-run acceptance); not part of the default merge suite",
]

[tool.coverage.run]
branch = true
source = ["src/mcp_server_nucleus"]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E741", "F841", "E722", "E702", "F401", "F541", "E401", "E731", "F403", "F405", "F811", "F821"]

