[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleus-relay-sdk"
version = "0.1.0"
description = "Minimal Python SDK for the Nucleus relay envelope protocol (post / read / ack)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nucleus Team", email = "hello@nucleusos.dev" }
]
urls = { Homepage = "https://github.com/eidetic-works/nucleus-mcp", Repository = "https://github.com/eidetic-works/nucleus-mcp" }
requires-python = ">=3.10"
keywords = ["mcp", "relay", "agent-coordination", "envelope", "nucleus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["nucleus_relay_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "nucleus_relay_sdk",
    "README.md",
    "pyproject.toml",
]
